chore: add jvmArgs for native access in seedDb task